addiung clear start function

--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <div>
         <element class=" btn stetched-link"> View Highscore :</element>
     </div>
-    <div class="container">
+    <div id="quizTitle" class="container">
         <h1 class="col-12  mt-5 mb-3 text-center"> Code Quiz</h1>
     </div>
-    <div class="container">
+    <div id="quizDescription" class="container">
         <p class="d-flex mx-auto col-6 justify-content-center font-weight-bold">Welcome to the Code Quiz. You will have 100 secondds to answer 20 multiple choice questions. Every incorrect answer will subtract 5 seconds from the timer. Good Luck!</p>
     </div>
-    <div class="container col-1 ">
+    <div id="startBtnCont" class="container col-1 ">
         <div class="text-center">
             <button id="startBtn" type="button" class="btn btn-primary my-3 mx-auto"> Start!</button>
         </div>
