adding if statement to stop for loop roations through questions

--- a/index.html
+++ b/index.html
@@ -29,15 +29,17 @@
         <h2 id="QuestionDisp"></h2>
         <div id="buttondiv" class="d-none">
             <div id="buttonclicks"> 
-                <button id="answer-0"class="btn btn-primary"></button>
+                <button id="answer-0" name="buttons" class="btn btn-primary"></button>
                 <br><br>
-                <button id="answer-1"class="btn btn-primary"></button>
+                <button id="answer-1" name="buttons" class="btn btn-primary"></button>
                 <br><br>
-                <button id="answer-2"class="btn btn-primary"></button>
+                <button id="answer-2" name="buttons" class="btn btn-primary"></button>
                 <br><br>
-                <button id="answer-3"class="btn btn-primary"></button>
+                <button id="answer-3" name="buttons" class="btn btn-primary"></button>
                 <br><br>
             </div>
+            <hr>
+            <p id="correctWrongResponse"></p>
 
         </div>
             
