basic quiz working

--- a/index.html
+++ b/index.html
@@ -24,25 +24,23 @@
         <div class="text-center">
             <button id="startBtn" type="button" class="btn btn-primary my-3 mx-auto"> Start!</button>
         </div>
-    </div>    
+    </div>
     <div id="QuestionCont" class="container">
         <h2 id="QuestionDisp"></h2>
         <div id="buttondiv" class="d-none">
-            <div id="buttonclicks"> 
-                <button id="answer-0" name="buttons" class="btn btn-primary"></button>
+                <button id="answer-0" name="buttons" class="btn btn-primary answer-button"></button>
                 <br><br>
-                <button id="answer-1" name="buttons" class="btn btn-primary"></button>
+                <button id="answer-1" name="buttons" class="btn btn-primary answer-button"></button>
                 <br><br>
-                <button id="answer-2" name="buttons" class="btn btn-primary"></button>
+                <button id="answer-2" name="buttons" class="btn btn-primary answer-button"></button>
                 <br><br>
-                <button id="answer-3" name="buttons" class="btn btn-primary"></button>
+                <button id="answer-3" name="buttons" class="btn btn-primary answer-button"></button>
                 <br><br>
-            </div>
             <hr>
             <p id="correctWrongResponse"></p>
 
         </div>
-            
+
     </div>
     <script src="script.js"></script>
 </body>
